--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -263,8 +263,8 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
 
-  src: url('../fonts/glyphicons-halflings-regular.eot.html');
-  src: url('../fonts/glyphicons-halflings-regular.eot%3F.html') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2.html') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff.html') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf.html') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg.html') format('svg');
+  src: url('../fonts/glyphicons-halflings-regular.eot');
+  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
