--- a/css/main-green.css
+++ b/css/main-green.css
@@ -1590,7 +1590,7 @@ CURRICULUM
 
 .portfolio-filters li.active a,
 .portfolio-filters li.active a:hover {
-    background-color: #2eca7f;
+    background-color: #000000;
     color: #fff;
 }
 
