--- a/css/main-green.css
+++ b/css/main-green.css
@@ -99,7 +99,7 @@ a {
 }
 
 a:hover {
-    color: #FF9800;
+    color: rgb(7, 175, 35);
     text-decoration: none;
     outline: none;
 }
@@ -2676,4 +2676,23 @@ blockquote .small {
     .home-page-description {
         font-size: 16px;
     }
+}
+
+.whatsapp-link {
+    color: #9e9e9e;
+    z-index: 1000;
+    text-decoration: none;
+    outline: none;
+}
+
+a:hover {
+    color: rgb(7, 175, 35);
+    text-decoration: none;
+    outline: none;
+}
+
+.fa-whatsapp {
+    margin-top: 16px;
+    text-decoration: none;
+    outline: none;
 }
